# Plugin_Obras

./: .gitignore  README.md  SPEC_CODEX_PLUGIN_AUTOCAD_SAPAL_RED.md
.github/instructions/: memory.instruction.md
database/: 001_schema_infraestructura.sql  002_tables_red.sql  003_indexes.sql
docs/: 01_arquitectura.md  02_especificacion_xdata.md  03_flujo_operativo.md  04_base_datos.md  05_prompts_codex.md  06_compilacion_instalacion_autocad.md
src/Sapal.Cad.Plugin/: README.md  Sapal.Cad.Plugin.csproj
src/Sapal.Cad.Plugin/Commands/: SapalCommands.cs
src/Sapal.Cad.Plugin/Models/: Catalogs.cs  LineaRedData.cs  PozoDrenajeData.cs
src/Sapal.Cad.Plugin/Properties/: AssemblyInfo.cs
src/Sapal.Cad.Plugin/Services/: CadGeometryService.cs  LayerService.cs  XDataService.cs
src/Sapal.Cad.Plugin/Validation/: SapalDataValidator.cs  ValidationResult.cs
src/Sapal.Dxf.Extractor/: README.md  pyproject.toml
src/Sapal.Dxf.Extractor/sapal_dxf_extractor/: __init__.py  config.py  dxf_reader.py  main.py  models.py  postgis_writer.py  validator.py
